--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="./images/foto/joseph-roulin.jpg" />
+    <img src="./images/foto/lands-end.jpg" />
+  </body>
 </html>
