--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="./images/pictures/pearblossom-hwy.jpg" />
+    <img src="./images/pictures/specimens.jpg" />
+    <img src="./images/pictures/stag-beetle.jpg" />
+  </body>
 </html>
